Removed leftover console logs from Arcade App; Fixed issue where AppDialog would wrap its info content in a <p> element, leading to warnings when an App would require displaying more than just text

--- a/src/System/AppManager/Styles/Dialog.css
+++ b/src/System/AppManager/Styles/Dialog.css
@@ -50,7 +50,7 @@ app-dialog-info {
     overflow: hidden;
 }
 
-app-dialog-info>p{
+app-dialog-info>div{
     margin: 10px;
 }
 
